[package]
name = "nostr-rs-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version="4", features=["derive", "cargo"]}
anyhow = "1.0"
log = "0.4"
env_logger = "0.9.0"
serde_json = "1.0"
tokio-tungstenite = "0.17"
tungstenite = "0.17"
tokio = { version = "1", features = ["full", "signal"] }
governor = "0.5"
futures = "0.3"
futures-util = "0.3"
rand = "0.8.4"
